# nix

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  progress.txt  rebuild.sh  shell.nix  skills-review.md
mdread/: Cargo.toml
mdread/src/: facet.rs  format.rs  frontmatter.rs  lib.rs  main.rs  model.rs  render.rs  resolve.rs  shadow.rs  slug.rs  tokens.rs  unfold.rs  wikilink.rs
mdread/tests/: golden.rs
mdread/tests/fixtures/: collisions-live.md  collisions-order.md  collisions.md  dialects.md  nested-fm.md  no-frontmatter.md  no-lede.md  rich.md
mdread/tests/golden/: MANIFEST.txt  cli_err_bad_depth.stderr  cli_err_bad_format.stderr  cli_err_missing_file.stderr  cli_err_no_args.stderr  cli_err_unknown_flag.stderr  collide_err_0.stderr  collide_err_fm.stderr  collide_err_text.stderr  collide_links.stderr  collide_links.stdout  collide_links_json.stdout  collide_num_1_1.stdout  collide_overview.stdout  collide_overview_json.stdout  dialect_num_1.stdout  dialect_num_1_strict.stdout  dialect_overview.stdout  dialect_overview_strict.stdout  dialect_text_strict.stdout  fmdoc_err_index_out_of_range.stderr  fmdoc_err_missing_key.stderr  fmdoc_fm.stdout  fmdoc_fm_indexed.stdout  fmdoc_fm_json.stdout  fmdoc_fm_mapping.stdout  fmdoc_fm_scalar.stdout  fmdoc_fm_seq_of_maps.stdout  fmdoc_fm_sequence_json.stdout  fmdoc_frontmatter_dot_path.stdout  fmdoc_overview.stdout  live_fm.stdout  live_fm_json.stderr  live_fm_json.stdout  live_links.stdout  live_overview.stdout  live_text.stderr  live_text.stdout  nolede_err_0.stderr  nolede_err_text.stderr  (+31 more)
mdstruct/: Cargo.toml
mdstruct/src/: lib.rs
mdstruct/src/core/: build.rs  mod.rs  model.rs  region.rs  span.rs  verify.rs  wikilink.rs
mdstruct/tests/: check_ndjson.rs  highlight_regions.rs  regions.rs  roundtrip.rs
vault-query/: Cargo.toml  GLOSSARY.md  shell.nix
vault-query/eval/: consult-eval.jsonl  run-eval.sh
vault-query/src/: config.rs  epistemic.rs  frontmatter.rs  index.rs  lib.rs  main.rs  markdown.rs  mdfacet.rs  output.rs  section.rs  slug.rs  tokens.rs  vault.rs  vault_ignore.rs  wikilink.rs
vault-query/src/base/: column.rs  date.rs  filter.rs  formula.rs  mod.rs  parse.rs  view.rs
vault-query/src/commands/: backlinks.rs  checkpoints.rs  config_cmd.rs  consult.rs  consult_cmd.rs  context.rs  files.rs  get.rs  links.rs  list.rs  log.rs  mod.rs  orphans.rs  projects.rs  properties.rs  query.rs  read.rs  resolve.rs  search.rs  tags.rs  tracks.rs  unresolved.rs  xp.rs
vault-query/src/commands/consult/: mod.rs  tests.rs
vault-query/src/commands/lint/: config.rs  format.rs  mod.rs  nodes.rs  registry.rs  rel-registry.json  relations.rs  rule.rs
vault-query/src/commands/lint/rules/: broken_wikilink.rs  dangling_reference.rs  dangling_relation_label.rs  duplicate_h1.rs  invalid_frontmatter.rs  missing_required_field.rs  mod.rs  orphan_card.rs  oversized_doc.rs  oversized_entry.rs  reference_not_wikilink.rs  reference_vault_link.rs  reference_wrong_type.rs  singleton_tag.rs  unknown_rel.rs  untagged_card.rs  untyped_entry.rs
vault-query/src/commands/read/: mod.rs  model.rs  render.rs  resolve.rs  unfold.rs
vault-query/src/commands/xp/: calendar.rs  mod.rs  parse.rs  streak.rs  theme.rs
vault-query/tests/: base.rs  consult_cli.rs  integration.rs  lint.rs  properties.rs  read.rs  search.rs  superseded.rs
vault-query/tests/common/: mod.rs
vault-query/tests/fixtures/: node-roundtrip.md  relations-roundtrip.md
vault-query/tests/fixtures/config/: root.config.json
vault-query/tests/fixtures/read/: headingless.md  properties.md  sample.md  unfold.md
vault-query/tests/fixtures/vault/: Inbox capture.md
vault-query/tests/fixtures/vault/20 cards/: Impureim sandwich.md  Retry patterns.md  (+3 more)
(+992 files in other folders)
