[package]
name = "mdread"
version = "0.1.0"
edition = "2024"
description = "Progressive-unfolding structured Markdown reader: fold a file to a heading tree, unfold one addressed section. A thin consumer of the mdstruct core."

[[bin]]
name = "mdread"
path = "src/main.rs"

[dependencies]
mdstruct = { path = "../mdstruct" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
