[package]
name = "mdread"
version.workspace = true
edition.workspace = true
description = "Progressive-unfolding structured Markdown reader: fold a file to a heading tree, unfold one addressed section. A thin consumer of the mdstruct core."

[[bin]]
name = "mdread"
path = "src/main.rs"

[dependencies]
mdstruct.workspace = true
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
