[package]
name = "mdstruct"
version = "0.1.0"
edition = "2024"
description = "Shared comrak-backed markdown structural-parsing core: locates structure, emits half-open byte spans, never restringifies."

[dependencies]
comrak = "0.53"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
