[package]
name = "mdstruct"
version.workspace = true
edition.workspace = true
description = "Shared comrak-backed markdown structural-parsing core: locates structure, emits half-open byte spans, never restringifies."

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
comrak = "0.53"
sha2 = "0.10"

[dev-dependencies]
