[package]
name = "vault-query"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mdstruct = { path = "../mdstruct" }
pulldown-cmark = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
tantivy = "0.22"
unicode-normalization = "0.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
