[package]
name = "vault-query"
version.workspace = true
edition.workspace = true

[dependencies]
mdread.workspace = true
mdstruct.workspace = true
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono = "0.4"
tantivy = "0.22"
unicode-normalization = "0.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
